<resources>
    <string name="app_name">Triviapp</string>
    <string name="new_game">Nuova partita</string>
    <string name="no_account">Non hai un account?</string>
    <string name="register">Registrati</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="has_account">Hai già un account?</string>
    <string name="logout">Logout</string>
    <string name="single_player">Single Player</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="custom_quiz">Partita personalizzata</string>
    <string name="play">Gioca</string>
    <string name="end">Fine</string>
    <string name="categories">Categorie</string>
    <string name="completate">Completate</string>
    <string name="sfide_in_corso">Sfide in corso</string>
    <string name="in_attesa">In attesa</string>
    <string name="waiting">In attesa di uno sfidante..</string>
</resources>